# maidea_remake

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  docker-compose.yml  entrypoint.sh  maidea.cfg.example
src/: CMakeLists.txt  Initialize.cpp  Initialize.hpp  main.cpp  main.h
src/client/: CMakeLists.txt  MyClient.cpp  MyClient.h  RegisterModule.h
src/core/: CMakeLists.txt
src/core/commandParser/: CMakeLists.txt  ParseCommand.cpp  ParseCommand.h
src/handler/: CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  Handler.cpp  Handler.h  MessageHandler.cpp  MessageHandler.h
src/logger/: Log.hpp
src/module/: BaseModule.cpp  BaseModule.h  CMakeLists.txt
src/module/base/: CMakeLists.txt  ModuleBase.cpp  ModuleBase.h  OldModuleBase.cpp  OldModuleBase.h  SlashCommandProcessorBase.h  TextProcessorBase.h
src/module/checklist/: CMakeLists.txt  Checklist.cpp  Checklist.h
src/module/example/: CMakeLists.txt  ExampleModule.h
src/module/hello/: CMakeLists.txt  Hello.cpp  Hello.h
src/module/info/: Info.h
src/module/io/: CMakeLists.txt  IOModule.cpp  IOModule.h
src/module/possession/: CMakeLists.txt  Possession.cpp  Possession.h
src/module/random/: CMakeLists.txt  Random.cpp  Random.h
src/module/role/: CMakeLists.txt  Role.cpp  Role.h
src/module/timer/: CMakeLists.txt  timer.cpp  timer.h
src/module/urlshortening/: CMakeLists.txt  URLShortening.cpp  URLShortening.h
src/test/: test.cpp
src/util/: CMakeLists.txt  Config.cpp  Config.hpp  ConsoleOut.cpp  ConsoleOut.h  MultipleUnique.h  ReadConfig.cpp  ReadConfig.h  SplitString.cpp  SplitString.hpp
src/util/config/: CMakeLists.txt  Config.cpp  Config.h
